# zinq-desktop

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  AGENTS.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_client.rs  errors.rs  lib.rs  logging.rs  main.rs  types.rs
src-tauri/src/auth/: auth_manager.rs  commands.rs  manager.rs  mod.rs  schemas.rs  state.rs  token_store.rs  types.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial_migration.sql
src-tauri/src/db/models/: chat_row.rs  message_row.rs  mod.rs  sync_state.rs
src-tauri/src/db/repositories/: chat.rs  message.rs  mod.rs  sync_state.rs
src-tauri/src/schemas/: chat.rs  event_log.rs  message.rs  mod.rs  user.rs
src-tauri/src/zinq/: commands.rs  event_processor.rs  manager.rs  mod.rs  socket_client.rs  sync_manager.rs
src/components/ChatCard/: ChatCard.svelte  index.ts  utils.ts
src/components/MediaGrid/: MediaGrid.svelte  index.ts
src/components/MessageList/: DateDivider.svelte  MessageBubble.svelte  MessageContent.svelte  MessageGroup.svelte  MessageList.svelte  MessageStatus.svelte  ScrollButton.svelte  index.ts  scroll-manager.svelte.ts  utils.ts
src/components/ui/: Avatar.svelte  Button.svelte  Input.svelte  Slider.svelte  Switch.svelte  Textarea.svelte  Tooltip.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte  main.css
src/stories/: media-grid-data.ts  test-data.ts
src/types/: index.ts
src/utils/: index.ts
(+25 files in other folders)
